--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style type="text/css">
       header {
         color: white;
-        background-image: url("assets/img/bg1.jpg");
+        background-image: url("assets/img/pv.jpg");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
@@ -38,7 +38,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 17Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
