--- a/ps/index.html
+++ b/ps/index.html
@@ -11,7 +11,7 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Tudo Pronto!</h1>
+          <h1>Pronto!</h1>
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
