--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ src="https://www.facebook.com/tr?id=396477958570268&ev=PageView&noscript=1"
             <!-- Headline -->
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 17Kg Em 30 Dias</b></h3>
 
-            <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
+           <script type="text/javascript" id="scr_626b1cbc5045c3000aeb4a2a">var s=document.createElement("script");s.src="https://scripts.converteai.net/4fe48b2f-385c-46d3-95a5-6c37fb9448d2/players/626b1cbc5045c3000aeb4a2a/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
